# Cloudflare-Record-Updater

./: .gitignore  Cargo.toml  readme.md
install/: ExampleConfig.Toml  cloudflare_updater.service
src/: cloudflare.rs  config.rs  main.rs  name.rs  service.rs
